feat: Implement play/pause, previous, next

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.0.0",
   "description": "A short description of your package",
   "keywords": [
+    "spotify",
+    "music"
   ],
   "activationCommands": {
     "atom-workspace": "doont-spotify:toggle"
